# GreyWest

./: .gitignore  README.md  go.mod  index.html  main.go  package-lock.json  package.json  tsconfig.json  wails.json
.cargo/: config.toml
app/: app.go  filter.go  parser.go  saver.go  sniffer.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: main.ts  styles.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/app/: App.d.ts  App.js
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/emit/: emit.rs
src-tauri/src/network/: filter.rs  interface.rs  mod.rs  packet.rs  parser.rs  saver.rs  sniffer.rs
