[package]
name = "greywest"
version = "1.0.0"
description = "Simple tool for network monitoring"
authors = ["nullclyze"]
edition = "2021"

[lib]
name = "greywest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "2.4.0"
pnet = "0.35.0"
tokio = { version = "1.50.0", features = ["time", "rt-multi-thread"] }
once_cell = "1.21.4"
